2016-01-30  Per Bothner  <per@bothner.com>

	* OutPort.java (isPrettyPrinting, atLineStart): New methods.
	(freshLine): Use atLineStart.
	* PrettyWriter.java (atLineStart): New method.
	* BinaryOutPort.java (getColumnNumber): Remove. 

2016-01-09  Per Bothner  <per@bothner.com>

	* CheckConsole.java: Change previous DomTerm handling: We don't want
	to assume we're connected to a DomTerm terminal just because the
	DOMTERM environment variable is set, since we might be in a pipe.

2015-12-17  Per Bothner  <per@bothner.com>

	* CheckConsole.java (haveConsole): If running under DomTerm,
	ignore --no-console flag.

2015-12-16  Per Bothner  <per@bothner.com>

	Add support for DomTerm.
	* CheckConsole.java (getDomTermVersionInfo, forDomTerm):
	New static methods.
	* TtyInPort.java (inDomTerm): New flag.
	(setInDomTerm): Set flag.
	(emitPrompt): Add DomTerm delimiters around prompt.
	* InPort.java: Maybe set dom-term flag on systemInPort.
	* DomTermErrorStream.java (setSystemErr): New static method.

2015-11-27  Per Bothner  <per@bothner.com>

	* DomTermErrorStream.java: New class - extends PrintStream.

2015-10-24  Per Bothner  <per@bothner.com>

	* InPort.java (inLocation): Add type parameters.
	* OutPort.java (outLocation, errLocation): Likewise.

2015-10-12  Per Bothner  <per@bothner.com>

	* InPort.java (stringPathname, evalPathname): New constants.
	* CharArrayInPort.java (stringPath): Use stringPathname.

	* Path.java (valueOf): A string starting with a '/' is a FilePath.

2015-10-10  Per Bothner  <per@bothner.com>

	Changes in Path/URI handling, with corrected RFC-3986 'resolve'.
	* URIPath.java (resolve): Rewrite, implementing the RFC-3986
	resolution algorithm, rather than using java.net.URI.resolve, which
	follows the obsolete RFC-2396.  Biggest difference is that resolve("")
	is now basically a no-op. Use resolve(".") to get directory.
	(resolveToUri): Helper method.
	(toFile): New method.
	* URLPath.java (resolve): Use resolveToUri.