@@ -1,3 +1,8 @@
+2016-02-09  Per Bothner  <per@bothner.com>
+
+	* CheckConsole.java: Re-factor so we can re-evaluate domterm status
+	after setHaveConsole - i.e. if DOMTERM env var and --console option.
+
 2016-01-30  Per Bothner  <per@bothner.com>
 
 	* OutPort.java (isPrettyPrinting, atLineStart): New methods.
